--- a/src/components/code/code-js/js-datatypes/pages/elem-array.html
+++ b/src/components/code/code-js/js-datatypes/pages/elem-array.html
@@ -1,22 +1,15 @@
 <h1>Array</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#array">array</a></p>
-    <p><a href="#properties">Свойства массивов</a></p>
-    <p><a href="#methods">Методы массивов</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#array">array</a></p>
+  <p><a href="#properties">Свойства массивов</a></p>
+  <p><a href="#methods">Методы массивов</a></p>
+</article>
 
 
 <!-- links -->
