--- a/src/components/code/code-js/js-practice/pages/elem-task.html
+++ b/src/components/code/code-js/js-practice/pages/elem-task.html
@@ -29,7 +29,7 @@
 <!-- Тема 1. Область видимости. Замыкания -->
 <article class="article">
   <div class="anchor" id="about"></div>
-  <h2>Тема 1. Область видимости. Замыкания</h2>
+  <h2>Тема 1. Область видимости (Scope). Замыкание (Closure)</h2>
 
   <h3>Задача 1. Что будет в консоли?</h3>
 <pre>let a = [];
@@ -81,7 +81,7 @@ array i: [ 1, 1, 1 ]</pre>
 <!-- Тема 2. Контекст (this) -->
 <article class="article">
   <div class="anchor" id="this"></div>
-  <h2>Тема 2. Контекст (this)</h2>
+  <h2>Тема 2. Контекст (Context). Ключевое слово this</h2>
 
   <h3>Задача 1. Что будет в консоли?</h3>
 <pre>var spiderMan = {
@@ -119,10 +119,10 @@ hello(spiderMan);</pre>
 </article>
 
 
-<!-- Тема3. Цикл событий. Event loop. Promise. setTimeout -->
+<!-- Тема3. Цикл событий (Event loop) -->
 <article class="article">
   <div class="anchor" id="eventloop"></div>
-  <h2>Тема3. Цикл событий. Event loop. Promise. setTimeout</h2>
+  <h2>Тема3. Цикл событий (Event loop)</h2>
 
   <h3>Задача 1. Что будет в консоли?</h3>
 <pre>setTimeout(() => {
