--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -1,22 +1,15 @@
 <h1>Frontend quiz</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<div class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#rs-test">RS Auto Test</a></p>
-    <p><a href="#dsr-exam">DSR Exam</a></p>
-    <p><a href="#neoflex">Neoflex</a></p>
-    <p><a href="#hh">hh.ru</a></p>
-    <p><a href="#quiz">quiz</a></p>
-  </div>
-
+  <p><a href="#rs-test">RS Auto Test</a></p>
+  <p><a href="#dsr-exam">DSR Exam</a></p>
+  <p><a href="#neoflex">Neoflex</a></p>
+  <p><a href="#hh">hh.ru</a></p>
+  <p><a href="#quiz">quiz</a></p>
 </div>
 
 
@@ -70,6 +63,7 @@
     <li><a href="rs-test/rs-test-websecurity.html" class="js-rs-test">[St2] Web Security</a> (79 из 100)</li>
     <li><a href="rs-test/rs-test-restful.html" class="js-rs-test">[St2] RESTful API Style</a> (85 из 100)</li>
     <li><a href="rs-test/rs-test-eventloop.html" class="js-rs-test">[St2] Event Loop & Animation</a> (88 из 100)</li>
+    <li><a href="rs-test/rs-test-testing.html" class="js-rs-test">[St2] Testing</a> (0 из 100)</li>
   </ol>
 </article>
 
