--- a/src/components/front/front-edu/pages/rs-test/rs-test-eventloop.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-eventloop.html
@@ -8,7 +8,7 @@
 
 
 <article class="article">
-<h3>Based on the provided code execution diagram, what is the correct order of execution?
+<h3>1. Based on the provided code execution diagram, what is the correct order of execution?
 </h3>
 <pre>setTimeout(() => alert("timeout"));
 
@@ -26,7 +26,7 @@ alert("code");</pre>
 
 
 <article class="article">
-  <h3>1. Based on the provided code, what would the correct call stack sequence be?</h3>
+  <h3>2. Based on the provided code, what would the correct call stack sequence be?</h3>
 <pre>function multiply(a, b) {
   return a * b;
 }
@@ -54,7 +54,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>2. Bezier curves are used for creating: (checkbox)</h3>
+  <h3>3. Bezier curves are used for creating: (checkbox)</h3>
   <ul>
     <li><strong>graphics on Canvas</strong></li>
     <li>raster graphics</li>
@@ -67,7 +67,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>For what purpose is the "cubic-bezier()" function used in CSS?</h3>
+  <h3>4. For what purpose is the "cubic-bezier()" function used in CSS?</h3>
   <ul>
     <li>To adjust an element's horizontal movement</li>
     <li>To enlarge an element upon clicking</li>
@@ -77,7 +77,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>How does setting "animation-direction: alternate-reverse"; affect the playback of an animation?</h3>
+  <h3>5. How does setting "animation-direction: alternate-reverse"; affect the playback of an animation?</h3>
   <ul>
     <li>In reverse order, starting from the end</li>
     <li>Randomly choosing the direction at the start of each cycle to increase unpredictability</li>
@@ -90,7 +90,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>3. How does the setInterval() method function in JavaScript?</h3>
+  <h3>6. How does the setInterval() method function in JavaScript?</h3>
   <ul>
     <li><strong>Repeatedly calls a function or executes a code snippet, with a fixed time delay between each call</strong></li>
     <li>Calls a function once after a specified time interval</li>
@@ -101,7 +101,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>4. How does the "setTimeout(function timeout() {}, 5000);" method function?</h3>
+  <h3>7. How does the "setTimeout(function timeout() {}, 5000);" method function?</h3>
   <ul>
     <li>Multiple times, as defined by the second argument</li>
     <li><strong>Once, after a specified period of time</strong></li>
@@ -111,7 +111,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>5. How is the refresh rate of a display quantified? (checkbox)</h3>
+  <h3>8. How is the refresh rate of a display quantified? (checkbox)</h3>
   <ul>
     <li><strong>fps</strong></li>
     <li><strong>1/s</strong></li>
@@ -123,7 +123,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>6. How many threads are there in JS?</h3>
+  <h3>9. How many threads are there in JS?</h3>
   <ul>
     <li>Dependent on the number of cores in the CPU</li>
     <li><strong>1</strong></li>
@@ -134,7 +134,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>Pick the default (initial) value of the timing function:</h3>
+  <h3>10. Pick the default (initial) value of the timing function:</h3>
   <ul>
     <li>easy-peasy</li>
     <li>ease-out</li>
@@ -146,7 +146,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>7. Select the keyframes snippet correctly representing the given leaf animation or both if they are equal. (checkbox)</h3>
+  <h3>11. Select the keyframes snippet correctly representing the given leaf animation or both if they are equal. (checkbox)</h3>
   <ul>
     <li><strong>(1)</strong>
 <pre>@keyframes leaf_anim {
@@ -169,7 +169,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>8. The "animation-fill-mode" property:</h3>
+  <h3>12. The "animation-fill-mode" property:</h3>
   <ul>
     <li>sets whether an animation running or paused</li>
     <li>sets the number of times an animation sequence should be played before stopping</li>
@@ -180,7 +180,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>9. The animation property is a shorthand for: (checkbox)</h3>
+  <h3>13. The animation property is a shorthand for: (checkbox)</h3>
   <ul>
     <li><strong>animation-timing-function</strong></li>
     <li><strong>animation-duration</strong></li>
@@ -195,7 +195,7 @@ printSquare();</pre>
 
 
 <article class="article">
-  <h3>10. The console output would be the following:</h3>
+  <h3>14. The console output would be the following:</h3>
 <pre>function first() {
   console.log("First function");
 }
@@ -222,8 +222,7 @@ third();</pre>
 
 
 <article class="article">
-  <h3>The console output would be the following:
-  </h3>
+  <h3>15. The console output would be the following:</h3>
 <pre>let callback = () => console.log("just regular timeout callback has run");
 
 let urgentCallback = () => console.log("an urgent callback has run 😱");
@@ -246,7 +245,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>11. The duration of an animation created with the .animate() method is measured in:</h3>
+  <h3>16. The duration of an animation created with the .animate() method is measured in:</h3>
   <ul>
     <li>light-years per snail pace</li>
     <li><strong>milliseconds</strong></li>
@@ -258,7 +257,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>12. The ease-in-out built-in curve represents CSS animation that is:</h3>
+  <h3>17. The ease-in-out built-in curve represents CSS animation that is:</h3>
   <ul>
     <li>starts abruptly, but progressively slows down towards the end</li>
     <li>begins slowly, increases in speed towards the end, and stops abruptly</li>
@@ -270,7 +269,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>13. The minimum number of points to create the Bezier curve presented on the pic are:</h3>
+  <h3>18. The minimum number of points to create the Bezier curve presented on the pic are:</h3>
   <ul>
     <li><strong>four points and the name of such curve is cubic</strong></li>
     <li>two points and the name of such curve is parabolic</li>
@@ -283,7 +282,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>14. The possible steps of the rendering waterfall while animating CSS properties: (checkbox)</h3>
+  <h3>19. The possible steps of the rendering waterfall while animating CSS properties: (checkbox)</h3>
   <ul>
     <li><strong>reflow</strong></li>
     <li><strong>composition</strong></li>
@@ -295,7 +294,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>15. To apply the following ⚓ animation (assuming that the picture's element aspect-ratio property is 1 / 1) - the transform-origin property should be set to:</h3>
+  <h3>20. To apply the following ⚓ animation (assuming that the picture's element aspect-ratio property is 1 / 1) - the transform-origin property should be set to:</h3>
   <ul>
     <li>center</li>
     <li>bottom left</li>
@@ -309,7 +308,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>16. What are the available rendering contexts for the HTML canvas element? (checkbox)</h3>
+  <h3>21. What are the available rendering contexts for the HTML canvas element? (checkbox)</h3>
   <ul>
     <li>CanvasRenderingContext3D</li>
     <li><strong>CanvasRenderingContext2D</strong></li>
@@ -322,7 +321,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>17. What are the correct descriptions of the code execution behavior for "setTimeout(func, 0)"? (checkbox)</h3>
+  <h3>22. What are the correct descriptions of the code execution behavior for "setTimeout(func, 0)"? (checkbox)</h3>
   <ul>
     <li><strong>Executes after processing calls from the call stack and the microtasks queue</strong></li>
     <li>Calls "func" every second</li>
@@ -333,7 +332,7 @@ console.log("main program exiting");</pre>
 
 
 <article class="article">
-  <h3>18. What is going to happen if we run this code?</h3>
+  <h3>23. What is going to happen if we run this code?</h3>
 <pre>function foo() {
   return foo();
 }
@@ -351,7 +350,7 @@ foo();</pre>
 
 
 <article class="article">
-  <h3>19. What is the Call Stack in JavaScript?</h3>
+  <h3>24. What is the Call Stack in JavaScript?</h3>
   <ul>
     <li>A location in a computer's RAM where functions are stored</li>
     <li>Simply a designated space in browser memory</li>
@@ -361,7 +360,7 @@ foo();</pre>
 
 
 <article class="article">
-  <h3>20. What is the execution order of microtasks and macrotasks?</h3>
+  <h3>25. What is the execution order of microtasks and macrotasks?</h3>
   <ul>
     <li><strong>After executing each macrotask, the engine checks for any microtasks and executes them before moving on to the next macrotask, UI rerendering, or other operations</strong></li>
     <li>The engine first executes all macrotasks, then proceeds to execute all microtasks</li>
@@ -371,7 +370,7 @@ foo();</pre>
 
 
 <article class="article">
-  <h3>21. What is the "Heap" in the context of JavaScript?</h3>
+  <h3>26. What is the "Heap" in the context of JavaScript?</h3>
   <ul>
     <li><strong>A large, mostly unstructured, dynamically allocated region of memory</strong></li>
     <li>An unordered version of the Call Stack</li>
@@ -381,7 +380,7 @@ foo();</pre>
 
 
 <article class="article">
-  <h3>What is the most effective method to achieve smooth JavaScript animations?</h3>
+  <h3>27. What is the most effective method to achieve smooth JavaScript animations?</h3>
   <ul>
     <li>a custom user-defined animation function</li>
     <li><strong>requestAnimationFrame()</strong></li>
@@ -391,7 +390,7 @@ foo();</pre>
 
 
 <article class="article">
-  <h3>22. What principle governs the order of operations within the Call Stack?</h3>
+  <h3>28. What principle governs the order of operations within the Call Stack?</h3>
   <ul>
     <li>queue</li>
     <li>Random</li>
@@ -403,7 +402,7 @@ foo();</pre>
 
 
 <article class="article">
-  <h3>What will be the console output?</h3>
+  <h3>29. What will be the console output?</h3>
 <pre>setTimeout(() => {
   console.log("First");
 }, 1000);
@@ -437,7 +436,7 @@ console.log("Last");
 
 
 <article class="article">
-  <h3>23. What will be the output of this code?</h3>
+  <h3>30. What will be the output of this code?</h3>
 <pre>console.log("start 🚗");
 
 setTimeout(function () {
@@ -467,7 +466,7 @@ console.log("let's go");</pre>
 
 
 <article class="article">
-  <h3>24. What will be the output of this code?</h3>
+  <h3>31. What will be the output of this code?</h3>
 <pre>console.log("hey");
 
 setTimeout(() => {
@@ -488,7 +487,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>Which CSS feature enables the gradual change of an element's properties over a specified period from initial to final state with no intermediate steps?</h3>
+  <h3>32. Which CSS feature enables the gradual change of an element's properties over a specified period from initial to final state with no intermediate steps?</h3>
   <ul>
     <li>CSS KeyFrames</li>
     <li>CSS Transform</li>
@@ -500,7 +499,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>25. Which method is used to establish a drawing context on a canvas element?</h3>
+  <h3>33. Which method is used to establish a drawing context on a canvas element?</h3>
   <ul>
     <li>setContext()</li>
     <li>defineContext()</li>
@@ -511,7 +510,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>26. Which of the following are considered macrotasks in the JavaScript event loop? (checkbox)</h3>
+  <h3>34. Which of the following are considered macrotasks in the JavaScript event loop? (checkbox)</h3>
   <ul>
     <li>Event handlers (addEventListener)</li>
     <li>XMLHttpRequest</li>
@@ -532,7 +531,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>27. Which of the following events triggers when the CSS animation finishes?</h3>
+  <h3>35. Which of the following events triggers when the CSS animation finishes?</h3>
   <ul>
     <li>transitionend</li>
     <li>onEnd</li>
@@ -543,7 +542,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>28. Which of the following is a widely used garbage collection algorithm?</h3>
+  <h3>36. Which of the following is a widely used garbage collection algorithm?</h3>
   <ul>
     <li>mark and delete</li>
     <li><strong>mark and sweep</strong></li>
@@ -554,7 +553,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>29. Which of the following is considered a Microtask in JavaScript? (checkbox)</h3>
+  <h3>37. Which of the following is considered a Microtask in JavaScript? (checkbox)</h3>
   <ul>
     <li><strong>Promise</strong></li>
     <li>synchronous code</li>
@@ -565,7 +564,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>30. Which of the following statements accurately describe the Event Loop in JavaScript? (checkbox)</h3>
+  <h3>38. Which of the following statements accurately describe the Event Loop in JavaScript? (checkbox)</h3>
   <ul>
     <li><strong>Creates a new context for a function called within another function, storing the previous context in the Call Stack</strong></li>
     <li><strong>Transfers tasks from the task queue to the call stack when the latter is empty</strong></li>
@@ -581,7 +580,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>31. Which properties are condensed into the shorthand "transition" CSS property? (checkbox)</h3>
+  <h3>39. Which properties are condensed into the shorthand "transition" CSS property? (checkbox)</h3>
   <ul>
     <li>transition-direction</li>
     <li><strong>transition-timing-function</strong></li>
@@ -594,7 +593,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>32. Which types of layers are recognized in a web page's rendering process by Chrome? (checkbox)</h3>
+  <h3>40. Which types of layers are recognized in a web page's rendering process by Chrome? (checkbox)</h3>
   <ul>
     <li><strong>GraphicsLayer</strong></li>
     <li>CSSLayer</li>
@@ -606,7 +605,7 @@ console.log("there");</pre>
 
 
 <article class="article">
-  <h3>33. Why is it better to move an element with the translate() property rather than with the position: absolute? (checkbox)</h3>
+  <h3>41. Why is it better to move an element with the translate() property rather than with the position: absolute? (checkbox)</h3>
   <ul>
     <li><strong>the animation looks smoother with more fluid motion</strong></li>
     <li>the animation quality doesn't depend on CSS properties</li>
