--- a/src/components/front/front-edu/pages/rs-test/rs-test-restful.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-restful.html
@@ -79,7 +79,7 @@
 
 
 <article class="article">
-  <h3>1. In which format does data exchange occur for a RESTful service?</h3>
+  <h3>7. In which format does data exchange occur for a RESTful service?</h3>
   <ul>
     <li>XML</li>
     <li>JSON</li>
@@ -90,7 +90,7 @@
 
 
 <article class="article">
-  <h3>7. Is it safe to transmit any data in the query string?</h3>
+  <h3>8. Is it safe to transmit any data in the query string?</h3>
   <ul>
     <li>safe</li>
     <li><strong>no</strong></li>
@@ -99,7 +99,7 @@
 
 
 <article class="article">
-  <h3>8. Is there a limit on the length of the query string?</h3>
+  <h3>9. Is there a limit on the length of the query string?</h3>
   <ul>
     <li>yes, there is a limit of 250 characters according to the specification</li>
     <li>there are no limits, and they cannot be configured according to the specification</li>
@@ -109,7 +109,7 @@
 
 
 <article class="article">
-  <h3>9. Is there an official standard for RESTful web APIs?</h3>
+  <h3>10. Is there an official standard for RESTful web APIs?</h3>
   <ul>
     <li>exists, called 'Simple Object Access Protocol'</li>
     <li>exists, called 'Application Programming Interface Protocol'</li>
@@ -121,7 +121,7 @@
 
 
 <article class="article">
-  <h3>10. It is allowed to divide the system into a hierarchy of layers, but with the condition that each component can only see the components of the immediately adjacent layer. What principle of REST is being discussed?</h3>
+  <h3>11. It is allowed to divide the system into a hierarchy of layers, but with the condition that each component can only see the components of the immediately adjacent layer. What principle of REST is being discussed?</h3>
   <ul>
     <li>client–server architecture</li>
     <li>statelessness</li>
@@ -134,7 +134,7 @@
 
 
 <article class="article">
-  <h3>11. Select the correct statements about OpenAPI: (checkbox)</h3>
+  <h3>12. Select the correct statements about OpenAPI: (checkbox)</h3>
   <ul>
     <li><strong>it is a specification</strong></li>
     <li>it uses only JSON as a format</li>
@@ -145,7 +145,7 @@
 
 
 <article class="article">
-  <h3>12. The server should not store any information about clients. The request should contain all the necessary information for request processing. What principle of REST is being discussed?</h3>
+  <h3>13. The server should not store any information about clients. The request should contain all the necessary information for request processing. What principle of REST is being discussed?</h3>
   <ul>
     <li>client–server architecture</li>
     <li><strong>statelessness</strong></li>
@@ -158,7 +158,7 @@
 
 
 <article class="article">
-  <h3>What are webhooks in the context of API communication?</h3>
+  <h3>14. What are webhooks in the context of API communication?</h3>
   <ul>
     <li>Function similarly to RESTful APIs but utilize the XML protocol</li>
     <li><strong>Serve as callback functions to enable event-driven communication among APIs</strong></li>
@@ -169,7 +169,7 @@
 
 
 <article class="article">
-  <h3>13. What does REST stand for in web development?</h3>
+  <h3>15. What does REST stand for in web development?</h3>
   <ul>
     <li>Resources Establishing Transfer</li>
     <li>Realtime Standard for Typescript</li>
@@ -182,7 +182,7 @@
 
 
 <article class="article">
-  <h3>14. What HTTP response status code will be returned if the user is denied access to the document, and it is not related to authentication?</h3>
+  <h3>16. What HTTP response status code will be returned if the user is denied access to the document, and it is not related to authentication?</h3>
   <ul>
     <li>200</li>
     <li>304</li>
@@ -197,7 +197,7 @@
 
 
 <article class="article">
-  <h3>14. What HTTP response status code will be returned if the user is denied access to the document, and it is related to authentication?</h3>
+  <h3>17. What HTTP response status code will be returned if the user is denied access to the document, and it is related to authentication?</h3>
   <ul>
     <li>200</li>
     <li>304</li>
@@ -212,7 +212,7 @@
 
 
 <article class="article">
-  <h3>15. What is an API?</h3>
+  <h3>18. What is an API?</h3>
   <ul>
     <li>transmission of a representative state</li>
     <li>architectural style of an application</li>
@@ -224,7 +224,7 @@
 
 
 <article class="article">
-  <h3>16. What is included in the concept of CRUD? (checkbox)</h3>
+  <h3>19. What is included in the concept of CRUD? (checkbox)</h3>
   <ul>
     <li><strong>reading</strong></li>
     <li><strong>creation</strong></li>
@@ -236,7 +236,7 @@
 
 
 <article class="article">
-  <h3>17. What is REST?</h3>
+  <h3>20. What is REST?</h3>
   <ul>
     <li><strong>architectural style of an application</strong></li>
     <li>plug-in authentication modules</li>
@@ -247,7 +247,7 @@
 
 
 <article class="article">
-  <h3>18. What is the difference between PUT and PATCH requests?</h3>
+  <h3>21. What is the difference between PUT and PATCH requests?</h3>
   <ul>
     <li>PUT performs partial updates, while PATCH performs complete updates</li>
     <li><strong>PATCH performs partial updates, while PUT performs complete updates</strong></li>
@@ -258,7 +258,7 @@
 
 
 <article class="article">
-  <h3>19. What is the domain in the endpoint http://example.com/wp-json/wp?page=2&sortBy=asc ?</h3>
+  <h3>22. What is the domain in the endpoint http://example.com/wp-json/wp?page=2&sortBy=asc ?</h3>
   <ul>
     <li>http://</li>
     <li><strong>example.com</strong></li>
@@ -270,7 +270,7 @@
 
 
 <article class="article">
-  <h3>What is the missing element in the chain?</h3>
+  <h3>23. What is the missing element in the chain?</h3>
   <code>Web app in browser - internet - API - ? - Database</code>
   <ul>
     <li>W3C mmetup</li>
@@ -291,7 +291,7 @@
 
 
 <article class="article">
-  <h3>20. What status code is typically used (according to REST principles) in the response for a successful DELETE request? (checkbox)</h3>
+  <h3>24. What status code is typically used (according to REST principles) in the response for a successful DELETE request? (checkbox)</h3>
   <ul>
     <li><strong>200</strong></li>
     <li>201</li>
@@ -304,7 +304,7 @@
 
 
 <article class="article">
-  <h3>21. What status code is typically used in the response for a successful processing of a POST request according to REST principles?</h3>
+  <h3>25. What status code is typically used in the response for a successful processing of a POST request according to REST principles?</h3>
   <ul>
     <li><strong>200</strong></li>
     <li>201</li>
@@ -316,7 +316,7 @@
 
 
 <article class="article">
-  <h3>22. What types of API exist? (checkbox)</h3>
+  <h3>26. What types of API exist? (checkbox)</h3>
   <ul>
     <li><strong>RPC</strong></li>
     <li><strong>SOAP</strong></li>
@@ -329,7 +329,7 @@
 
 
 <article class="article">
-  <h3>23. Which class of HTTP response status codes indicates that the request cannot be fulfilled due to client error?</h3>
+  <h3>27. Which class of HTTP response status codes indicates that the request cannot be fulfilled due to client error?</h3>
   <ul>
     <li>1хх</li>
     <li>2хх</li>
@@ -341,7 +341,7 @@
 
 
 <article class="article">
-  <h3>Which class of HTTP response status codes is responsible for the process of data transmission, informing that the request has been received and processing will continue?</h3>
+  <h3>28. Which class of HTTP response status codes is responsible for the process of data transmission, informing that the request has been received and processing will continue?</h3>
   <ul>
     <li>1хх</li>
     <li>2хх</li>
@@ -353,7 +353,7 @@
 
 
 <article class="article">
-  <h3>24. Which classes of HTTP response status codes exist? (checkbox)</h3>
+  <h3>29. Which classes of HTTP response status codes exist? (checkbox)</h3>
   <ul>
     <li><strong>informational responses</strong></li>
     <li><strong>client error responses</strong></li>
@@ -366,7 +366,7 @@
 
 
 <article class="article">
-<h3>25. Which HTTP method is responsible for Create in CRUD operations?</h3>
+<h3>30. Which HTTP method is responsible for Create in CRUD operations?</h3>
   <ul>
     <li>GET</li>
     <li><strong>POST</strong></li>
@@ -378,7 +378,7 @@
 
 
 <article class="article">
-  <h3>26. Which HTTP method is responsible for Read in CRUD operations?</h3>
+  <h3>31. Which HTTP method is responsible for Read in CRUD operations?</h3>
   <ul>
     <li>PATCH</li>
     <li>POST</li>
@@ -390,7 +390,7 @@
 
 
 <article class="article">
-  <h3>27. Which of the answers describes private API?</h3>
+  <h3>32. Which of the answers describes private API?</h3>
   <ul>
     <li>(1)
     <br>- APIs are available to any third-party developers
@@ -409,7 +409,7 @@
 
 
 <article class="article">
-  <h3>28. Which of the conditions are mandatory constraints for REST applications? (checkbox)</h3>
+  <h3>33. Which of the conditions are mandatory constraints for REST applications? (checkbox)</h3>
   <ul>
     <li><strong>cacheability</strong></li>
     <li><strong>statelessness</strong></li>
@@ -422,7 +422,7 @@
 
 
 <article class="article">
-  <h3>29. Which of the following answers correctly represents the sequence of URL components?</h3>
+  <h3>34. Which of the following answers correctly represents the sequence of URL components?</h3>
   <ul>
     <li>protocol + domain + query string + path</li>
     <li><strong>protocol + domain + path + query string</strong></li>
@@ -433,7 +433,7 @@
 
 
 <article class="article">
-  <h3>30. Which of the HTTP response status codes indicates that the request has been successfully processed according to the user's expectations?</h3>
+  <h3>35. Which of the HTTP response status codes indicates that the request has been successfully processed according to the user's expectations?</h3>
   <ul>
     <li><strong>200</strong></li>
     <li>304</li>
@@ -448,7 +448,7 @@
 
 
 <article class="article">
-  <h3>31. Which of the HTTP response status codes means that nothing is found at the given URL — the document does not exist?</h3>
+  <h3>36. Which of the HTTP response status codes means that nothing is found at the given URL — the document does not exist?</h3>
   <ul>
     <li>200</li>
     <li>304</li>
@@ -463,7 +463,7 @@
 
 
 <article class="article">
-  <h3>32. Which of the HTTP response status codes means that the server is temporarily unable to handle requests due to technical reasons?</h3>
+  <h3>37. Which of the HTTP response status codes means that the server is temporarily unable to handle requests due to technical reasons?</h3>
   <ul>
     <li>200</li>
     <li>304</li>
@@ -478,7 +478,7 @@
 
 
 <article class="article">
-  <h3>33. Which type of API is the most common today?</h3>
+  <h3>38. Which type of API is the most common today?</h3>
   <ul>
     <li>ADT</li>
     <li><strong>REST</strong></li>
