--- a/src/components/front/front-edu/pages/rs-test/rs-test-websecurity.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-websecurity.html
@@ -31,7 +31,7 @@
 
 
 <article class="article">
-<h3>Choose correct statements:</h3>
+<h3>3. Choose correct statements:</h3>
 <ul>
   <li><strong>HTTP uses port 80, HTTPS uses port 443</strong></li>
   <li><strong>HTTPS uses encryption, which ensures the confidentiality of transmitted information.</strong></li>
@@ -42,7 +42,7 @@
 
 
 <article class="article">
-<h3>Differences between HTTP/1.1 and HTTP/2: (checkbox)</h3>
+<h3>4. Differences between HTTP/1.1 and HTTP/2: (checkbox)</h3>
 <ul>
   <li><strong>HTTP/2 - binary</strong></li>
   <li><strong>HTTP/2 has request prioritization as well as header compression</strong></li>
@@ -54,7 +54,7 @@
 
 
 <article class="article">
-  <h3>3. For which HTTP protocol versions do HTTP messages remain human-readable? (checkbox)</h3>
+  <h3>5. For which HTTP protocol versions do HTTP messages remain human-readable? (checkbox)</h3>
   <ul>
     <li><strong>HTTP/0.9</strong></li>
     <li><strong>HTTP/1.1</strong></li>
@@ -65,7 +65,7 @@
 
 
 <article class="article">
-  <h3>4. How does the Leaky Bucket algorithm differ from the Token Bucket?</h3>
+  <h3>6. How does the Leaky Bucket algorithm differ from the Token Bucket?</h3>
   <ul>
     <li><strong>It allows bursts of traffic</strong></li>
     <li>It adds tokens to a bucket</li>
@@ -76,7 +76,7 @@
 
 
 <article class="article">
-<h3>How does the Same-origin policy help prevent cross-site scripting (XSS) attacks?</h3>
+<h3>7. How does the Same-origin policy help prevent cross-site scripting (XSS) attacks?</h3>
 <ul>
   <li>By allowing scripts from any origin to access sensitive data</li>
   <li><strong>By restricting scripts from one origin from accessing resources from another origin</strong></li>
@@ -87,7 +87,7 @@
 
 
 <article class="article">
-  <h3>5. How is the signature part of a JWT created?</h3>
+  <h3>8. How is the signature part of a JWT created?</h3>
   <ul>
     <li>By encrypting the payload</li>
     <li>By hashing the header</li>
@@ -98,7 +98,7 @@
 
 
 <article class="article">
-  <h3>6. HTTP protocol methods are: (checkbox)</h3>
+  <h3>9. HTTP protocol methods are: (checkbox)</h3>
   <ul>
     <li><strong>GET</strong></li>
     <li><strong>PATCH</strong></li>
@@ -111,7 +111,7 @@
 
 
 <article class="article">
-  <h3>7. In the 'GET / HTTP/1.1' entry, the first slash indicates:</h3>
+  <h3>10. In the 'GET / HTTP/1.1' entry, the first slash indicates:</h3>
   <ul>
     <li>separator</li>
     <li>absolute path on the site</li>
@@ -122,7 +122,7 @@
 
 
 <article class="article">
-  <h3>8. In JWT, what does the header typically consist of?</h3>
+  <h3>11. In JWT, what does the header typically consist of?</h3>
   <ul>
     <li>Payload data</li>
     <li>Signature</li>
@@ -133,7 +133,7 @@
 
 
 <article class="article">
-  <h3>9. Methods that allow you to asynchronously obtain network resources: (checkbox)</h3>
+  <h3>12. Methods that allow you to asynchronously obtain network resources: (checkbox)</h3>
   <ul>
     <li>get()</li>
     <li>send()</li>
@@ -145,7 +145,7 @@
 
 
 <article class="article">
-  <h3>Select existing HTTP header categories:(checkbox)</h3>
+  <h3>13. Select existing HTTP header categories:(checkbox)</h3>
   <ul>
     <li>representation headers</li>
     <li>secondary headers</li>
@@ -158,7 +158,7 @@
 
 
 <article class="article">
-  <h3>10. Select HTTP request stages: (checkbox)</h3>
+  <h3>14. Select HTTP request stages: (checkbox)</h3>
   <ul>
     <li>client opens TCP connection</li>
     <li><strong>client sends HTTP message to server</strong></li>
@@ -171,7 +171,7 @@
 
 
 <article class="article">
-  <h3>11. Select the correct statements regarding HTTP: (checkbox)</h3>
+  <h3>15. Select the correct statements regarding HTTP: (checkbox)</h3>
   <ul>
     <li><strong>unidirectional (request/response)</strong></li>
     <li><strong>uses TCP as a transport layer</strong></li>
@@ -182,7 +182,7 @@
 
 
 <article class="article">
-  <h3>12. The response code 4xx indicates that... (checkbox)</h3>
+  <h3>16. The response code 4xx indicates that... (checkbox)</h3>
   <ul>
     <li>HTTP request completed successfully</li>
     <li><strong>There were problems with the request on the client side</strong></li>
@@ -193,7 +193,7 @@
 
 
 <article class="article">
-  <h3>13. Valid methods for a "simple" CORS request: (checkbox)</h3>
+  <h3>17. Valid methods for a "simple" CORS request: (checkbox)</h3>
   <ul>
     <li><strong>GET</strong></li>
     <li>PUT</li>
@@ -206,7 +206,7 @@
 
 
 <article class="article">
-  <h3>What can be contained in an HTTP request? (checkbox)</h3>
+  <h3>18. What can be contained in an HTTP request? (checkbox)</h3>
   <ul>
     <li><strong>HTTP method (name)</strong></li>
     <li><strong>path to resource</strong></li>
@@ -219,7 +219,7 @@
 
 
 <article class="article">
-  <h3>14. What data format does a POST request sent with fetch() support?</h3>
+  <h3>19. What data format does a POST request sent with fetch() support?</h3>
   <ul>
     <li>JSX</li>
     <li>webp</li>
@@ -230,7 +230,7 @@
 
 
 <article class="article">
-  <h3>15. What is a downside of the Fixed Window Counter algorithm?</h3>
+  <h3>20. What is a downside of the Fixed Window Counter algorithm?</h3>
   <ul>
     <li>It is complex to implement</li>
     <li>It can allow bursts of requests at the window boundary</li>
@@ -241,7 +241,7 @@
 
 
 <article class="article">
-  <h3>Which is a server application that acts as an intermediary between a client requesting a resource and the server providing that resource?</h3>
+  <h3>21. Which is a server application that acts as an intermediary between a client requesting a resource and the server providing that resource?</h3>
   <ul>
     <li>HTTP/HTTPS protocol</li>
     <li>CORS-mechanism</li>
@@ -253,7 +253,7 @@
 
 
 <article class="article">
-  <h3>16. What is cookie?</h3>
+  <h3>22. What is cookie?</h3>
   <ul>
     <li>open standard for creating access tokens based on JSON format</li>
     <li>web application software methods and protocols used to store data in a web browser</li>
@@ -264,7 +264,7 @@
 
 
 <article class="article">
-  <h3>17. What is HTTP?</h3>
+  <h3>23. What is HTTP?</h3>
   <ul>
     <li>a special protocol that is responsible for storing DNS addresses of sites</li>
     <li><strong>network data protocol</strong></li>
@@ -275,7 +275,7 @@
 
 
 <article class="article">
-  <h3>18. What is MIME Type?</h3>
+  <h3>24. What is MIME Type?</h3>
   <ul>
     <li><strong>standard describing the format of a document, file, or set of bytes</strong></li>
     <li>HTTP protocol extension which supports encryption for improved security</li>
@@ -287,7 +287,7 @@
 
 
 <article class="article">
-  <h3>19. What is phishing?</h3>
+  <h3>25. What is phishing?</h3>
   <ul>
     <li>Phishing is exploiting browser vulnerabilities. Users can prevent it by updating browsers and installing patches.</li>
     <li>Phishing is intercepting data to steal personal information. Users can prevent it by encrypting connections and avoiding public Wi-Fi.</li>
@@ -298,7 +298,7 @@
 
 
 <article class="article">
-  <h3>What is the primary purpose of JSON Web Tokens (JWT)?</h3>
+  <h3>26. What is the primary purpose of JSON Web Tokens (JWT)?</h3>
   <ul>
     <li><strong>To securely transmit information between parties as a JSON object</strong></li>
     <li>To encrypt data sent over the internet</li>
@@ -310,7 +310,7 @@
 
 
 <article class="article">
-  <h3>20. What is the primary purpose of rate limiting?</h3>
+  <h3>27. What is the primary purpose of rate limiting?</h3>
   <ul>
     <li>To enhance the UI/UX design</li>
     <li><strong>To limit the number of requests to an endpoint</strong></li>
@@ -322,7 +322,7 @@
 
 
 <article class="article">
-  <h3>21. What is the primary purpose of the HTTP Authorization header?</h3>
+  <h3>28. What is the primary purpose of the HTTP Authorization header?</h3>
   <ul>
     <li><strong>To provide authentication credentials for HTTP requests</strong></li>
     <li>To encrypt data sent over HTTP</li>
@@ -333,7 +333,7 @@
 
 
 <article class="article">
-  <h3>22. What is the purpose of the Same-origin policy in web security?</h3>
+  <h3>29. What is the purpose of the Same-origin policy in web security?</h3>
   <ul>
     <li>To ensure that all websites look similar</li>
     <li><strong>To restrict how web pages or scripts from one origin can interact with resources from another origin</strong></li>
@@ -344,7 +344,7 @@
 
 
 <article class="article">
-  <h3>23. What is used to protect resources from potentially harmful documents and reduce attack vectors?</h3>
+  <h3>30. What is used to protect resources from potentially harmful documents and reduce attack vectors?</h3>
   <ul>
     <li>CORS</li>
     <li><strong>Same-origin Policy</strong></li>
@@ -355,7 +355,7 @@
 
 
 <article class="article">
-  <h3>24. What layer of the OSI model does HTTP belong to?</h3>
+  <h3>31. What layer of the OSI model does HTTP belong to?</h3>
   <ul>
     <li><strong>to application layer</strong></li>
     <li>to the presentation layer</li>
@@ -368,7 +368,8 @@
 </article>
 
 
-  <h3>25. What layer of the OSI model does TCP belong to?</h3>
+<article class="article">
+  <h3>32. What layer of the OSI model does TCP belong to?</h3>
   <ul>
     <li>to application layer</li>
     <li>to the presentation layer</li>
@@ -382,7 +383,7 @@
 
 
 <article class="article">
-  <h3></h3>What should not be stored in a JWT to avoid security issues?
+  <h3>33. What should not be stored in a JWT to avoid security issues?</h3>
   <ul>
     <li>The user's favorite color</li>
     <li><strong>Sensitive session data</strong></li>
@@ -394,7 +395,7 @@
 
 
 <article class="article">
-  <h3>26. What the HTTP Response Code Shows?</h3>
+  <h3>34. What the HTTP Response Code Shows?</h3>
   <ul>
     <li>number of seconds the server responds to a request</li>
     <li><strong>whether the HTTP request was completed successfully, status</strong></li>
@@ -405,7 +406,7 @@
 
 
 <article class="article">
-  <h3>27. What type of encryption does HTTPS use?</h3>
+  <h3>35. What type of encryption does HTTPS use?</h3>
   <ul>
     <li>SSH</li>
     <li><strong>TLS</strong></li>
@@ -416,7 +417,7 @@
 
 
 <article class="article">
-  <h3>28. What type of encryption is used to encrypt data in TLS?</h3>
+  <h3>36. What type of encryption is used to encrypt data in TLS?</h3>
   <ul>
     <li><strong>symmetrical</strong></li>
     <li>asymmetrical</li>
@@ -427,7 +428,7 @@
 
 
 <article class="article">
-  <h3>29. What type of encryption is used to encrypt the key in TLS?</h3>
+  <h3>37. What type of encryption is used to encrypt the key in TLS?</h3>
   <ul>
     <li>no encryption used</li>
     <li>depends on the server</li>
@@ -438,7 +439,7 @@
 
 
 <article class="article">
-  <h3>What type of token is typically used with the Bearer authentication scheme?</h3>
+  <h3>38. What type of token is typically used with the Bearer authentication scheme?</h3>
   <ul>
     <li>SSL Certificate</li>
     <li><strong>Access token</strong></li>
@@ -449,7 +450,7 @@
 
 
 <article class="article">
-  <h3>What types of HTTP messages are there?</h3>
+  <h3>39. What types of HTTP messages are there?</h3>
   <ul>
     <li>responses</li>
     <li>requests</li>
@@ -461,7 +462,7 @@
 
 
 <article class="article">
-  <h3>30. Which are correct statements about MFA? (checkbox)</h3>
+  <h3>40. Which are correct statements about MFA? (checkbox)</h3>
   <ul>
     <li>Requires multiple forms of authentication</li>
     <li><strong>Enhances security against unauthorized access</strong></li>
@@ -472,7 +473,7 @@
 
 
 <article class="article">
-  <h3>Which front-end library for HTTP requests is based on promises?</h3>
+  <h3>41. Which front-end library for HTTP requests is based on promises?</h3>
   <ul>
     <li>Fetch API</li>
     <li><strong>axios</strong></li>
@@ -483,7 +484,7 @@
 
 
 <article class="article">
-  <h3>Which HTTP method is used for preflight CORS request?</h3>
+  <h3>42. Which HTTP method is used for preflight CORS request?</h3>
   <ul>
     <li>GET</li>
     <li>PUT</li>
@@ -496,7 +497,7 @@
 
 
 <article class="article">
-  <h3>31. Which is a server application that acts as an intermediary between a client requesting a resource and the server providing that resource?</h3>
+  <h3>43. Which is a server application that acts as an intermediary between a client requesting a resource and the server providing that resource?</h3>
   <ul>
     <li>HTTP/HTTPS protocol</li>
     <li>CORS-mechanism</li>
@@ -508,7 +509,7 @@
 
 
 <article class="article">
-  <h3>32. Which mechanism uses additional headers to access resources on a domain other than what the site is currently using?</h3>
+  <h3>44. Which mechanism uses additional headers to access resources on a domain other than what the site is currently using?</h3>
   <ul>
     <li>xml</li>
     <li>XMLHttpRequest</li>
@@ -519,7 +520,7 @@
 
 
 <article class="article">
-  <h3>33. Which type of rate limiter cannot be bypassed by using multiple clients?</h3>
+  <h3>45. Which type of rate limiter cannot be bypassed by using multiple clients?</h3>
   <ul>
     <li>Client-side rate limiter</li>
     <li><strong>Server-side rate limiter</strong></li>
@@ -530,7 +531,7 @@
 
 
 <article class="article">
-  <h3>Which version of the HTTP protocol is still relevant today, despite being adopted in 1999?</h3>
+  <h3>46. Which version of the HTTP protocol is still relevant today, despite being adopted in 1999?</h3>
   <ul>
     <li>2.0</li>
     <li>0.9</li>
@@ -538,4 +539,3 @@
     <li>3.0</li>
   </ul>
 </article>
-
