--- a/src/components/front/front-edu/pages/rs-test/rs-test-webstorage.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-webstorage.html
@@ -8,11 +8,12 @@
 
 
 <article class="article">
-  <h3>1. Based on the provided JavaScript code, what output will be displayed in the console?
-  <br>console.log(document.cookie);
-  <br>// stage1=done; stage2=inprogress
-  <br>document.cookie = "school=RSSchool";
-  <br>console.log(document.cookie); // ??</h3>
+  <h3>1. Based on the provided JavaScript code, what output will be displayed in the console?</h3>
+<pre>console.log(document.cookie);
+<br>// stage1=done; stage2=inprogress
+<br>document.cookie = "school=RSSchool";
+<br>console.log(document.cookie); // ??</pre>
+
   <ul>
     <li>stage1=done; stage2=inprogress</li>
     <li>school=RSSchool</li>
