--- a/src/components/front/front-vacancy/pages/elem-invite.html
+++ b/src/components/front/front-vacancy/pages/elem-invite.html
@@ -4,7 +4,7 @@
 <!-- links -->
 <article class="article">
 
-  <p><a href="">Мое резюме на hh.ru</a></p>
+  <p><a href="https://nevel.hh.ru/resume/35787630ff09432ccd0039ed1f794c796c5278">Мое резюме на hh.ru</a></p>
   <p>Я откликаюсь на вакансии Javascript Frontend Developer. Здесь все отклики, на которые мне прищло приглашение. Или на интервью или на выполнение тестового задания.</p>
 </article>
 
@@ -12,6 +12,16 @@
 <h3>Список вакансий которые на отклик прислали приглашение</h3>
 
 <ol reversed>
+  <li>
+    3 апреля 2024 Стажер-разработчик в отдел развития внутренних сервисов
+    <br><strong>Ренессанс Банк, Москва</strong>
+    <br>Москва з/п не указана
+  </li>
+  <li>
+    3 апреля 2024 Руководитель группы разработчиков (Frontend Team Lead)
+    <br><strong>МНИТИ</strong>
+    <br>Москва от 180 000 до 200 000 ₽ на руки
+  </li>
   <li>
     29 марта 2024 Front-end разработчик/верстальщик/веб-разработчик
     <br><strong>Шнайдер Консалт</strong>
