--- a/src/components/front/front-vacancy/pages/elem-refuse.html
+++ b/src/components/front/front-vacancy/pages/elem-refuse.html
@@ -4,7 +4,7 @@
 <!-- links -->
 <article class="article">
 
-  <p><a href="">Мое резюме на hh.ru</a></p>
+  <p><a href="https://nevel.hh.ru/resume/35787630ff09432ccd0039ed1f794c796c5278">Мое резюме на hh.ru</a></p>
   <p>Я откликаюсь на вакансии Javascript Frontend Developer и мне сразу приходит отказ. Чтобы не мучить людей и не откликаться дважды на одну и туже вакансию, я составил список когда и куда я уже стучался.</p>
 </article>
 
@@ -12,6 +12,11 @@
 <h3>Список отклоненных вакансий</h3>
 
 <ol reversed>
+  <li>
+    2 апреля 2024 Frontend-разработчик
+    <br><strong>Кэрот Бродкаст</strong>
+    <br>Москва от 60 000 до 120 000 ₽ на руки
+  </li>
   <li>
     27 марта 2024 Frontend разработчик JavaScript
     <br><strong>Digital Sail</strong>
